--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "npm run sitemap && vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"postinstall": "wget https://github.com/PrismJS/prism-themes/raw/refs/heads/master/themes/prism-atom-dark.css -O static/prism-atom-dark.css"
+		"postinstall": "wget https://github.com/PrismJS/prism-themes/raw/refs/heads/master/themes/prism-atom-dark.css -O static/prism-atom-dark.css",
+		"sitemap": "node scripts/generate-sitemap.js"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
